fix: removed query parameters
