# docs/swagger.yaml
@@ -24,147 +24,6 @@ definitions:
       value:
         type: string
     type: object
-  modelversion.ModelVersion:
-    properties:
-      aliases:
-        items:
-          type: string
-        type: array
-      creation_timestamp:
-        type: integer
-      current_stage:
-        type: string
-      description:
-        type: string
-      last_updated_timestamp:
-        type: integer
-      name:
-        type: string
-      run_id:
-        type: string
-      run_link:
-        type: string
-      source:
-        type: string
-      status:
-        $ref: '#/definitions/modelversion.ModelVersionStatus'
-      status_message:
-        type: string
-      tags:
-        items:
-          $ref: '#/definitions/modelversion.ModelVersionTag'
-        type: array
-      user_id:
-        type: string
-      version:
-        type: string
-    type: object
-  modelversion.ModelVersionStatus:
-    enum:
-    - PENDING_REGISTRATION
-    - FAILED_REGISTRATION
-    - READY
-    type: string
-    x-enum-varnames:
-    - PendingRegistration
-    - FailedRegistration
-    - Ready
-  modelversion.ModelVersionTag:
-    properties:
-      key:
-        type: string
-      value:
-        type: string
-    type: object
-  registeredmodel.ModelVersion:
-    properties:
-      aliases:
-        items:
-          type: string
-        type: array
-      creation_timestamp: {}
-      current_stage:
-        type: string
-      description:
-        type: string
-      last_updated_timestamp: {}
-      name:
-        type: string
-      run_id:
-        type: string
-      run_link:
-        type: string
-      source:
-        type: string
-      status:
-        $ref: '#/definitions/registeredmodel.ModelVersionStatus'
-      status_message:
-        type: string
-      tags:
-        items:
-          $ref: '#/definitions/registeredmodel.ModelVersionTag'
-        type: array
-      user_id:
-        type: string
-      version:
-        type: string
-    type: object
-  registeredmodel.ModelVersionStatus:
-    enum:
-    - PENDING_REGISTRATION
-    - FAILED_REGISTRATION
-    - READY
-    type: string
-    x-enum-varnames:
-    - PendingRegistration
-    - FailedRegistration
-    - Ready
-  registeredmodel.ModelVersionTag:
-    properties:
-      key:
-        type: string
-      value:
-        type: string
-    type: object
-  registeredmodel.RegisteredModel:
-    properties:
-      aliases:
-        items:
-          $ref: '#/definitions/registeredmodel.RegisteredModelAlias'
-        type: array
-      creation_timestamp:
-        type: integer
-      description:
-        type: string
-      last_updated_timestamp:
-        type: integer
-      latest_versions:
-        items:
-          $ref: '#/definitions/registeredmodel.ModelVersion'
-        type: array
-      name:
-        type: string
-      tags:
-        items:
-          $ref: '#/definitions/registeredmodel.RegisteredModelTag'
-        type: array
-      user_id:
-        type: string
-    type: object
-  registeredmodel.RegisteredModelAlias:
-    properties:
-      key:
-        type: string
-      value:
-        type: string
-    type: object
-  registeredmodel.RegisteredModelTag:
-    properties:
-      key:
-        type: string
-      value:
-        type: string
-    type: object
   run.DatasetInput:
     properties:
       dataset_id:
@@ -308,50 +167,14 @@ paths:
       - application/json
       description: Create a new model version
       operationId: create-model-version
-      parameters:
-      - description: Register model under this name
-        in: body
-        name: name
-        required: true
-        schema:
-          type: string
-      - description: URI indicating the location of the model artifacts
-        in: body
-        name: source
-        required: true
-        schema:
-          type: string
-      - description: MLflow run ID for correlation, if source was generated by an
-          experiment run in MLflow tracking server
-        in: body
-        name: run_id
-        schema:
-          type: string
-      - description: Additional metadata for model version
-        in: body
-        name: tags
-        schema:
-          items:
-            $ref: '#/definitions/modelversion.ModelVersionTag'
-          type: array
-      - description: MLflow run link - this is the exact link of the run that generated
-          this model version, potentially hosted at another instance of MLflow
-        in: body
-        name: run_link
-        schema:
-          type: string
-      - description: Optional description for model version
-        in: body
-        name: description
-        schema:
-          type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/modelversion.ModelVersion'
+            additionalProperties: true
+            type: object
       summary: Create a new model version
   /2.0/mlflow/model-versions/get:
     get:
@@ -374,7 +197,8 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/modelversion.ModelVersion'
+            additionalProperties: true
+            type: object
       summary: Get metadata for a model version
   /2.0/mlflow/registered-models/get:
     get:
@@ -392,7 +216,8 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/registeredmodel.RegisteredModel'
+            additionalProperties: true
+            type: object
       summary: Get metadata for a registered model
   /2.0/mlflow/runs/create:
     post:
@@ -425,6 +250,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/run.Run'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: Get metadata for a run
 schemes:
 - http
